# dagwright

./: .gitignore  CHARTER.md  METRIC.md  PLANNER_NOTES.md  README.md  pyproject.toml
catalog/: contracts.yaml  grain_morphisms.yaml  invariants.yaml  layers.yaml  operations.yaml
dagwright/: __main__.py  cli.py  column_lineage.py  diff.py  loaders.py  mcp_server.py  output.py  planner.py  risks.py  sql_render.py  state.py  watch.py
experiments/: README.md  column_lineage.py  determinism.py  iteration_cost.py  pr_classification.md  quality_rubric.py  sql_equivalence.py  sweep.py
experiments/research/: README.md  pr_classification_cal_itp.md
specs/: REQUEST_TYPES.md  schema.md
tests/jaffle_shop/: REGENERATE.md  manifest.json  metabase.json
tests/jaffle_shop/specs/: new_customers_monthly.yaml
tests/jaffle_shop_modern/: REGENERATE.md  manifest.json  metabase.json
tests/jaffle_shop_modern/specs/: customer_bundle.target.yaml  customer_domain.target.yaml  lifetime_spend_pretax.yaml
tests/mattermost/: REGENERATE.md
tests/mattermost/specs/: dau_desktop_only.yaml
